# turbohtml

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  HOUSE_STYLE.md  LICENSE  NOTICE  README.md  meson.build  pyproject.toml  tox.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature-request.md  feature-request.yml
.github/workflows/: check.yaml  codspeed.yaml  fuzz.yaml  prepare-release.yaml  release.yaml
docs/: changelog.rst  conf.py  development.rst  explanation.rst  how-this-was-built.rst  how-to.rst  index.rst  license.rst  migration.rst  performance.rst  reference.rst  tutorials.rst
docs/_ext/: bench_table.py  llms_txt.py
docs/_extra/: llms-full.txt  llms.txt
docs/_static/: custom.css
docs/changelog/: 1.feature.rst  1.misc.rst  11.feature.rst  14.feature.rst  15.feature.rst  16.feature.rst  162.feature.rst  163.doc.rst  164.doc.rst  165.doc.rst  166.doc.rst  167.doc.rst  168.doc.rst  169.doc.rst  17.feature.rst  170.doc.rst  171.breaking.rst  171.feature.rst  172.feature.rst  173.feature.rst  174.bugfix.rst  175.feature.rst  176.bugfix.rst  177.bugfix.rst  178.feature.rst  179.feature.rst  18.feature.rst  180.feature.rst  181.feature.rst  182.feature.rst  189.bugfix.rst  19.doc.rst  19.feature.rst  194.feature.rst  2.doc.rst  20.feature.rst  208.doc.rst  21.feature.rst  210.feature.rst  211.feature.rst  (+310 more)
docs/design/: js-minify.md
docs/development/: cpyext.rst  index.rst  performance.rst
docs/explanation/: build.rst  c-core.rst  canonicalization.rst  conformance.rst  cssom.rst  detect.rst  extract.rst  foundations.rst  free-threading.rst  index.rst  interpreters.rst  main-content.rst  mutation.rst  parse-and-dom.rst  parsing.rst  queries.rst  query.rst  ranges.rst  sanitizing.rst  sax.rst  serialization.rst  serialize.rst  shadow-dom.rst  source-locations.rst  stdlib-parity.rst  streaming.rst  structured-data.rst  traversal.rst  tree-model.rst  treebuild.rst  validate.rst  validation.rst  xml.rst  xslt.rst
docs/how-to/: build.rst  building.rst  canonicalizing.rst  chaining.rst  clean.rst  cli.rst  computed-style.rst  conformance.rst  convert-and-transform.rst  css-to-xpath.rst  detect.rst  editing.rst  encoding.rst  escaping.rst  extract.rst  extracting.rst  feeds.rst  finding.rst  forms.rst  from-htmlparser.rst  getting-help.rst  index.rst  inspecting.rst  links.rst  main-content.rst  markdown.rst  matching.rst  minifying.rst  observing-mutations.rst  page-metadata.rst  parse-and-dom.rst  parsing.rst  plain-text.rst  pruning.rst  query.rst  querying.rst  ranges.rst  rewriting.rst  sanitizing.rst  sax.rst  (+18 more)
docs/migration/: airium.rst  beautifulsoup.rst  bleach.rst  boilerpy3.rst  build.rst  calmjs-parse.rst  chardet.rst  charset-normalizer.rst  clean.rst  convert.rst  courlan.rst  csscompressor.rst  cssselect.rst  cssutils.rst  detect.rst  dominate.rst  dompurify.rst  extract.rst  extruct.rst  fast-html.rst  feedparser.rst  goose3.rst  htbuilder.rst  html-sanitizer.rst  html-text.rst  html2text.rst  html5-parser.rst  html5lib.rst  html5validator.rst  htmldate.rst  htmlmin.rst  htpy.rst  hyperpython.rst  index.rst  inscriptis.rst  jsdom.rst  jsmin.rst  justext.rst  lightningcss.rst  linkify-it-py.rst  (+34 more)
docs/reference/: build.rst  clean.rst  cli.rst  conformance.rst  convert.rst  cssom.rst  detect.rst  extract.rst  linkify.rst  match.rst  nodes.rst  parsing.rst  query.rst  sanitize.rst  serialize.rst  structured-data.rst  tokenizer.rst  transform.rst  validate.rst
docs/tutorials/: cleaning.rst  cli.rst  editing.rst  exporting.rst  extracting-content.rst  forms.rst  foundations.rst  getting-started.rst  index.rst  navigating.rst  pipelines.rst  reading-bytes.rst  real-world.rst  selecting.rst  tokenizing.rst
licenses/: LICENSE-WHATWG
src/turbohtml/: __init__.py  __main__.py  _article.py  _cssmin.py  _dates.py  _feed.py  _html.pyi  _htmlmodule.c  _jsminify.py  _linkify.py  _links.py  _locations.py  _match.py  _minify.py  _render.py  _sanitizer.py  _selectors.py  _structured_data.py  _urls.py  _xpath.py  annotation.c  ascii.h  attr_atom.h  bleach_compat.py  build.py  charref.c  charref.h  clean.py  conformance.py  convert.py  cssom.py  detect.py  encoding.h  encoding_detect.h  (+45 more)
tasks/: release.py
tests/: conftest.py  test_annotation_exporter_errors.py  test_annotation_surface.py  test_annotation_tags.py  test_bench_migration.py  test_bench_notes.py  test_bench_stats.py  test_bench_table_directive.py  test_bleach_compat.py  test_cli.py  test_detector_presence.py  test_detector_span.py  test_detector_tlds.py  test_docs.py  test_docs_feeds.py  test_encoding.py  test_encoding_conformance.py  test_encoding_detect_coverage.py  test_escape.py  test_html5lib_entities.py  test_html_parser.py  test_incremental_parser_bytes.py  test_incremental_parser_freethread.py  test_linkify.py  test_links_edges.py  test_links_resolve.py  test_markup.py  test_minify_roundtrip.py  test_namespaces.py  test_query.py  test_readme.py  test_sanitizer.py  test_sanitizer_security.py  test_serialize_output_options.py  test_stub_signature_parity.py  test_tokenizer.py  test_tokenizer_conformance.py  test_tokenizer_references.py  test_tree_api.py  test_tree_attr.py  (+45 more)
tests/conformance/oracles/decoder/: Cargo.toml
tests/conformance/oracles/decoder/src/: main.rs
tests/conformance/oracles/detector/: Cargo.toml
tests/conformance/oracles/detector/src/: main.rs
tools/: benchmark.py  generate_attrs.py  generate_css_colors.py  generate_encoding_detector.py  generate_encoding_tables.py  generate_entities.py  generate_html_entities.py  generate_idna.py  generate_language_detector.py  generate_normalize.py  generate_psl.py  generate_tags.py  generate_tlds.py  generate_version.py  generate_wpt_encoding_corpus.py  httpfetch.py  js_minify_harness.c  js_sanitize.py  pgo_build.py  pgo_corpus.py  pgo_train.py  pgo_validate.py  prune_dist.py  ruff_docs.py  run_clang_tidy.py  tsan-suppressions.txt
(+675 files in other folders)
